--- a/themes/raiser/sass/components/_progress-bar.scss
+++ b/themes/raiser/sass/components/_progress-bar.scss
@@ -6,6 +6,8 @@
   @include box-shadow(0 2px 3px #999); 
   height: em(16);
   padding: 0;
+  width: 90%;
+  margin: 0.5em auto 0 0;
 
   .redhen-campaign-thermo-percent-bar {
     background: $primary;
@@ -18,6 +20,7 @@
 .field-name-redhen-campaign-goal {
   color: $white;
   font-size: em(20);
+  padding-left: 1em;
 
   .rhc_progress {
     display: block;
@@ -33,7 +36,8 @@
 
 .field-name-field-end-date {
   color: $white;
-  margin-top: 0.3em;
+  margin-top: 1em;
+  margin-left: 1em;
 
   .date-display-interval {
     color: $action; 
