--- a/themes/raiser/sass/layouts/_campaign.scss
+++ b/themes/raiser/sass/layouts/_campaign.scss
@@ -15,7 +15,7 @@
     } 
 
     background: $white;
-    padding: 1em;
+    //padding: 1em;
 
     .page__title {
       display: none; 
@@ -30,15 +30,11 @@
     }
 
     background: $lt-gray;
-    margin-left: 1em;
-    //position: absolute;
-    //height: 100%;
+    height: 100%;
+    position: absolute;
 
     .region-sidebar-first {
-      max-width: 90%; 
-      margin: 0 auto;
-      padding-right: 2em;
-      padding-top: 1em;
+      //padding-top: 1em;
     }
 
     .block-bean {
@@ -58,16 +54,15 @@
     background: $primary-widget; 
     color: $primary;
     position: absolute;
-    top: 0;
     left: 0;
-    width: 85%;
-    padding: 1em 0.6em 2em 0.5em;
+    width: 95%;
+    padding-top: 2em;
+    padding-bottom: 2em;
 
     h2 { display: none; }
   }
 
   #block-bean-social-media-links {
-    margin-top: 14em; 
     padding-bottom: 1em;
     margin-left: auto;
     margin-right: auto;
@@ -103,18 +98,25 @@
   }
   
   // Promo block
-  .bean-promo {
-    text-align: center;
+  #block-bean-donation-matching {
+    margin-right: 1em;
+    margin-top: 1em;
 
-    img { 
-      @include border-radius(8px);
-      @include box-shadow(0 3px 5px $gray);
-      border: 3px solid $white;
-      width: 100%; 
-    }
+    .block-title { display: none; } 
 
-    p {
-      margin: 1em 0; 
+    .bean-promo {
+      text-align: center;
+
+      img { 
+        @include border-radius(8px);
+        @include box-shadow(0 3px 5px $gray);
+        border: 3px solid $white;
+        width: 100%; 
+      }
+
+      p {
+        margin: 1em 0; 
+      }
     }
   }
 } // end .page-redhen-campaign
