--- a/themes/raiser/css/styles.css
+++ b/themes/raiser/css/styles.css
@@ -912,7 +912,11 @@ form button:hover {
 .page-redhen-campaign aside .block-bean {
   border-bottom: 1px solid white;
 }
-/* line 46, ../sass/layouts/_campaign.scss */
+/* line 47, ../sass/layouts/_campaign.scss */
+.page-redhen-campaign .field-name-field-story-media img {
+  width: 100%;
+}
+/* line 51, ../sass/layouts/_campaign.scss */
 .page-redhen-campaign iframe {
   border: 3px solid white;
   -webkit-box-shadow: 0 3px 5px #989898;
@@ -920,7 +924,7 @@ form button:hover {
   box-shadow: 0 3px 5px #989898;
   width: 100%;
 }
-/* line 53, ../sass/layouts/_campaign.scss */
+/* line 58, ../sass/layouts/_campaign.scss */
 .page-redhen-campaign #block-bean-campaign-progress {
   background: #cdd6c5;
   color: #5e9733;
@@ -930,21 +934,21 @@ form button:hover {
   padding-top: 2em;
   padding-bottom: 2em;
 }
-/* line 62, ../sass/layouts/_campaign.scss */
+/* line 67, ../sass/layouts/_campaign.scss */
 .page-redhen-campaign #block-bean-campaign-progress h2 {
   display: none;
 }
-/* line 65, ../sass/layouts/_campaign.scss */
+/* line 70, ../sass/layouts/_campaign.scss */
 .page-redhen-campaign #block-bean-social-media-links {
   padding-bottom: 1em;
   margin-left: auto;
   margin-right: auto;
 }
-/* line 70, ../sass/layouts/_campaign.scss */
+/* line 75, ../sass/layouts/_campaign.scss */
 .page-redhen-campaign #block-bean-social-media-links .field-item {
   float: left;
 }
-/* line 75, ../sass/layouts/_campaign.scss */
+/* line 80, ../sass/layouts/_campaign.scss */
 .page-redhen-campaign #block-bean-social-media-links a {
   background: url(../images/social.png) no-repeat;
   background-size: 214px;
@@ -955,36 +959,36 @@ form button:hover {
   text-indent: -9999px;
   margin-right: 0.3em;
 }
-/* line 85, ../sass/layouts/_campaign.scss */
+/* line 90, ../sass/layouts/_campaign.scss */
 .page-redhen-campaign #block-bean-social-media-links a.twitter-link {
   background-position: 0 0;
 }
-/* line 88, ../sass/layouts/_campaign.scss */
+/* line 93, ../sass/layouts/_campaign.scss */
 .page-redhen-campaign #block-bean-social-media-links a.facebook-link {
   background-position: -56px 0;
 }
-/* line 91, ../sass/layouts/_campaign.scss */
+/* line 96, ../sass/layouts/_campaign.scss */
 .page-redhen-campaign #block-bean-social-media-links a.linkedin-link {
   background-position: -112px 0;
 }
-/* line 94, ../sass/layouts/_campaign.scss */
+/* line 99, ../sass/layouts/_campaign.scss */
 .page-redhen-campaign #block-bean-social-media-links a.googleplus-link {
   background-position: -168px 0;
 }
-/* line 101, ../sass/layouts/_campaign.scss */
+/* line 106, ../sass/layouts/_campaign.scss */
 .page-redhen-campaign #block-bean-donation-matching {
-  margin-right: 1em;
+  margin-right: 1.2em;
   margin-top: 1em;
 }
-/* line 105, ../sass/layouts/_campaign.scss */
+/* line 110, ../sass/layouts/_campaign.scss */
 .page-redhen-campaign #block-bean-donation-matching .block-title {
   display: none;
 }
-/* line 107, ../sass/layouts/_campaign.scss */
+/* line 112, ../sass/layouts/_campaign.scss */
 .page-redhen-campaign #block-bean-donation-matching .bean-promo {
   text-align: center;
 }
-/* line 110, ../sass/layouts/_campaign.scss */
+/* line 115, ../sass/layouts/_campaign.scss */
 .page-redhen-campaign #block-bean-donation-matching .bean-promo img {
   -webkit-border-radius: 8px;
   -moz-border-radius: 8px;
@@ -997,7 +1001,7 @@ form button:hover {
   border: 3px solid white;
   width: 100%;
 }
-/* line 117, ../sass/layouts/_campaign.scss */
+/* line 122, ../sass/layouts/_campaign.scss */
 .page-redhen-campaign #block-bean-donation-matching .bean-promo p {
   margin: 1em 0;
 }
@@ -2605,7 +2609,7 @@ tr.selected td {
 }
 
 /* line 1, ../sass/components/_updates.scss */
-.view-campaign-updates {
+#block-redhen-raiser-campaign-updates-campaign-updates, .view-campaign-updates {
   -webkit-box-shadow: 0 3px 5px #989898;
   -moz-box-shadow: 0 3px 5px #989898;
   box-shadow: 0 3px 5px #989898;
@@ -2613,21 +2617,21 @@ tr.selected td {
   padding: 2em 1em;
 }
 /* line 6, ../sass/components/_updates.scss */
-.view-campaign-updates .node-campaign-update {
+#block-redhen-raiser-campaign-updates-campaign-updates .node-campaign-update, .view-campaign-updates .node-campaign-update {
   margin-bottom: 2em;
 }
 /* line 9, ../sass/components/_updates.scss */
-.view-campaign-updates .node-campaign-update h2 {
+#block-redhen-raiser-campaign-updates-campaign-updates .node-campaign-update h2, .view-campaign-updates .node-campaign-update h2 {
   position: absolute;
   left: 85px;
   line-height: 1em;
 }
 /* line 13, ../sass/components/_updates.scss */
-.view-campaign-updates .node-campaign-update h2 a {
+#block-redhen-raiser-campaign-updates-campaign-updates .node-campaign-update h2 a, .view-campaign-updates .node-campaign-update h2 a {
   color: #5e9733;
 }
 /* line 18, ../sass/components/_updates.scss */
-.view-campaign-updates .node-campaign-update img {
+#block-redhen-raiser-campaign-updates-campaign-updates .node-campaign-update img, .view-campaign-updates .node-campaign-update img {
   -webkit-border-radius: 8px;
   -moz-border-radius: 8px;
   -ms-border-radius: 8px;
@@ -2636,12 +2640,12 @@ tr.selected td {
   float: left;
 }
 /* line 23, ../sass/components/_updates.scss */
-.view-campaign-updates .node-campaign-update .field-name-body {
+#block-redhen-raiser-campaign-updates-campaign-updates .node-campaign-update .field-name-body, .view-campaign-updates .node-campaign-update .field-name-body {
   padding-left: 70px;
   padding-top: 1em;
 }
 /* line 28, ../sass/components/_updates.scss */
-.view-campaign-updates .node-campaign-update .node-readmore {
+#block-redhen-raiser-campaign-updates-campaign-updates .node-campaign-update .node-readmore, .view-campaign-updates .node-campaign-update .node-readmore {
   padding-left: 70px;
 }
 
