--- a/themes/raiser/sass/components/_updates.scss
+++ b/themes/raiser/sass/components/_updates.scss
@@ -1,4 +1,6 @@
-#block-redhen-raiser-campaign-updates-campaign-updates, .view-campaign-updates {
+#block-redhen-raiser-campaign-updates-campaign-updates, 
+#block-redhen-raiser-campaign-updates-campaign-page-updates,
+.view-campaign-updates {
   @include box-shadow(0 3px 5px $gray);
   background: $white;
   padding: 2em 1em;
