--- a/themes/raiser/sass/layouts/_campaign.scss
+++ b/themes/raiser/sass/layouts/_campaign.scss
@@ -55,6 +55,7 @@
   }
   
   // Progress widget
+  #block-bean-campaign-page-progress,
   #block-bean-campaign-progress {
     background: $primary-widget; 
     color: $primary;
