--- a/themes/raiser/css/styles.css
+++ b/themes/raiser/css/styles.css
@@ -1192,6 +1192,42 @@ body.front #content {
   width: 30px;
 }
 
+/* line 2, ../sass/components/_campaign-individual.scss */
+.redhen-campaign-page-individual .redhen-contact-contact {
+  float: left;
+  margin-right: 1em;
+}
+/* line 6, ../sass/components/_campaign-individual.scss */
+.redhen-campaign-page-individual .redhen-contact-contact .content img {
+  border-radius: 8px;
+}
+/* line 11, ../sass/components/_campaign-individual.scss */
+.redhen-campaign-page-individual .redhen_campaign_page_title {
+  float: left;
+  font-size: 1em;
+  margin-top: 0.5em;
+  width: 80%;
+}
+/* line 18, ../sass/components/_campaign-individual.scss */
+.redhen-campaign-page-individual .redhen_campaign_page_team {
+  display: block;
+  float: left;
+  font-size: 0.875em;
+  width: 80%;
+}
+/* line 25, ../sass/components/_campaign-individual.scss */
+.redhen-campaign-page-individual .redhen_campaign_page_campaign {
+  font-size: 0.875em;
+}
+/* line 29, ../sass/components/_campaign-individual.scss */
+.redhen-campaign-page-individual .field-label {
+  font-weight: normal;
+}
+/* line 33, ../sass/components/_campaign-individual.scss */
+.redhen-campaign-page-individual .clearfix:after {
+  display: inline !important;
+}
+
 /* line 4, ../sass/components/_campaign-list-item.scss */
 .front #block-views-campaigns-block h2 {
   text-align: center;
@@ -1272,26 +1308,43 @@ body.front #content {
   -moz-box-shadow: 0 2px 5px #989898;
   box-shadow: 0 2px 5px #989898;
 }
-/* line 7, ../sass/components/_campaign_banner.scss */
+/* line 8, ../sass/components/_campaign_banner.scss */
+.page-redhen-campaign #highlighted #block-bean-campaign-page-banner,
 .page-redhen-campaign #highlighted #block-bean-campaign-banner {
   margin-bottom: 0;
 }
-/* line 9, ../sass/components/_campaign_banner.scss */
+/* line 10, ../sass/components/_campaign_banner.scss */
+.page-redhen-campaign #highlighted #block-bean-campaign-page-banner img,
 .page-redhen-campaign #highlighted #block-bean-campaign-banner img {
   width: 100%;
 }
-/* line 14, ../sass/components/_campaign_banner.scss */
-.page-redhen-campaign #highlighted h2 {
-  left: 0.5em;
+/* line 15, ../sass/components/_campaign_banner.scss */
+.page-redhen-campaign #highlighted .redhen-campaign-general h2,
+.page-redhen-campaign #highlighted .redhen_campaign_page_campaign {
+  display: block;
+  font-family: Georgia, "Times New Roman", serif;
+  font-size: 1.75em;
+  left: 0.7em;
   position: absolute;
-  top: 4em;
-  z-index: 1;
+  top: 5.5em;
+  z-index: 3;
 }
-/* line 20, ../sass/components/_campaign_banner.scss */
-.page-redhen-campaign #highlighted h2 a {
+/* line 24, ../sass/components/_campaign_banner.scss */
+.page-redhen-campaign #highlighted .redhen-campaign-general h2 a,
+.page-redhen-campaign #highlighted .redhen_campaign_page_campaign a {
   color: white;
 }
-/* line 23, ../sass/components/_campaign_banner.scss */
+/* line 27, ../sass/components/_campaign_banner.scss */
+.page-redhen-campaign #highlighted .redhen-campaign-general h2 {
+  top: 4em;
+  max-width: 38%;
+  line-height: 1.125em;
+}
+/* line 33, ../sass/components/_campaign_banner.scss */
+.page-redhen-campaign #highlighted h2 {
+  display: none;
+}
+/* line 37, ../sass/components/_campaign_banner.scss */
 .page-redhen-campaign #highlighted .field-name-field-teaser {
   background: rgba(0, 0, 0, 0.6);
   bottom: 0;
@@ -1302,11 +1355,11 @@ body.front #content {
   height: 150px;
   width: 40%;
 }
-/* line 33, ../sass/components/_campaign_banner.scss */
+/* line 47, ../sass/components/_campaign_banner.scss */
 .page-redhen-campaign #highlighted .field-name-field-teaser .field-item {
   margin-top: 3em;
 }
-/* line 39, ../sass/components/_campaign_banner.scss */
+/* line 53, ../sass/components/_campaign_banner.scss */
 .page-redhen-campaign #highlighted .redhen_campaign_page_donate,
 .page-redhen-campaign #highlighted .field-type-redhen-donation {
   position: absolute;
@@ -1314,7 +1367,7 @@ body.front #content {
   right: 1em;
   z-index: 2;
 }
-/* line 45, ../sass/components/_campaign_banner.scss */
+/* line 59, ../sass/components/_campaign_banner.scss */
 .page-redhen-campaign #highlighted .redhen_campaign_page_donate a,
 .page-redhen-campaign #highlighted .field-type-redhen-donation a {
   background: none;
