--- a/themes/raiser/css/styles.css
+++ b/themes/raiser/css/styles.css
@@ -1397,6 +1397,30 @@ body.front #content {
   background: #ffab30;
 }
 
+/* line 2, ../sass/components/_donation-form.scss */
+.page-redhen-campaign-donate h2#page-title {
+  display: block;
+  margin: 1em 0;
+}
+/* line 7, ../sass/components/_donation-form.scss */
+.page-redhen-campaign-donate form {
+  border-right: 1px solid #f1f1f1;
+  padding-right: 1em;
+}
+/* line 11, ../sass/components/_donation-form.scss */
+.page-redhen-campaign-donate form fieldset {
+  border: none;
+  padding: 0;
+}
+/* line 15, ../sass/components/_donation-form.scss */
+.page-redhen-campaign-donate form fieldset legend {
+  font-size: 1.25em;
+}
+/* line 20, ../sass/components/_donation-form.scss */
+.page-redhen-campaign-donate form #edit-product-label {
+  display: none;
+}
+
 /* line 1, ../sass/components/_footer.scss */
 footer {
   background: #5e9733;
