--- a/themes/raiser/sass/layouts/_campaign.scss
+++ b/themes/raiser/sass/layouts/_campaign.scss
@@ -15,7 +15,6 @@
     } 
 
     background: $white;
-    //padding: 1em;
 
     .page__title {
       display: none; 
@@ -33,13 +32,14 @@
     height: 100%;
     position: absolute;
 
-    .region-sidebar-first {
-      //padding-top: 1em;
-    }
-
     .block-bean {
       border-bottom: 1px solid $white;
     }
+  }
+
+  // Team Individual Button
+  .redhen-campaign-pages-button {
+    @include cta-btn; 
   }
   
   // Campaign story image
