--- a/themes/raiser/css/styles.css
+++ b/themes/raiser/css/styles.css
@@ -715,6 +715,32 @@ form button:hover {
   color: white;
   background: #ffab30;
 }
+/* line 80, ../sass/base/_base.scss */
+form a.button {
+  background: none;
+  padding: 0.8em 1em;
+  border-radius: 0.7em;
+  -webkit-box-shadow: 0 2px 3px #666666;
+  -moz-box-shadow: 0 2px 3px #666666;
+  box-shadow: 0 2px 3px #666666;
+  background: none;
+  border: 3px solid #5e9733;
+  box-shadow: none;
+  color: #5e9733;
+}
+/* line 50, ../sass/_mixins.scss */
+form a.button:hover {
+  -webkit-transition: all 0.5s;
+  -moz-transition: all 0.5s;
+  -o-transition: all 0.5s;
+  transition: all 0.5s;
+}
+/* line 62, ../sass/_mixins.scss */
+form a.button:hover {
+  background: #5e9733;
+  border: 3px solid #90c965;
+  color: white;
+}
 
 /* Layout rules */
 /**
@@ -1324,6 +1350,67 @@ body.front #content {
   color: #f8971c;
 }
 
+/* line 3, ../sass/components/_campaign-team-individual-list.scss */
+.view-campaign-pages .views-row {
+  background: white;
+  border-radius: 8px;
+  -webkit-box-shadow: 0 3px 5px #989898;
+  -moz-box-shadow: 0 3px 5px #989898;
+  box-shadow: 0 3px 5px #989898;
+  margin-bottom: 1em;
+  padding-top: 1em;
+  padding-bottom: 2em;
+}
+@media (min-width: 48em) {
+  /* line 3, ../sass/components/_campaign-team-individual-list.scss */
+  .view-campaign-pages .views-row {
+    display: inline-block;
+    margin-bottom: 2em;
+    min-height: 18.75em;
+    width: 31.33333%;
+    float: left;
+    margin-right: 2%;
+    padding: 1em 0;
+  }
+}
+/* line 21, ../sass/components/_campaign-team-individual-list.scss */
+.view-campaign-pages .views-row h2 {
+  text-align: left;
+  font-size: 1.125em;
+  line-height: 1em;
+  margin-top: 0;
+  padding: 0 1em;
+}
+/* line 28, ../sass/components/_campaign-team-individual-list.scss */
+.view-campaign-pages .views-row h2 a {
+  color: #5e9733;
+}
+/* line 31, ../sass/components/_campaign-team-individual-list.scss */
+.view-campaign-pages .views-row .redhen-contact-contact {
+  padding: 0 1em;
+  text-align: center;
+  display: block;
+}
+/* line 36, ../sass/components/_campaign-team-individual-list.scss */
+.view-campaign-pages .views-row .redhen-contact-contact img {
+  border-radius: 0.5em;
+  border: 3px solid white;
+  -webkit-box-shadow: 0 3px 5px #989898;
+  -moz-box-shadow: 0 3px 5px #989898;
+  box-shadow: 0 3px 5px #989898;
+  width: 97%;
+}
+/* line 46, ../sass/components/_campaign-team-individual-list.scss */
+.view-campaign-pages .views-row .redhen_campaign_page_campaign,
+.view-campaign-pages .views-row .redhen_campaign_page_title {
+  font-size: 1em;
+  margin-left: 1em;
+}
+/* line 51, ../sass/components/_campaign-team-individual-list.scss */
+.view-campaign-pages .views-row .clearfix:after {
+  display: block !important;
+}
+
 /* line 2, ../sass/components/_campaign-team.scss */
 .redhen-campaign-page-team .field-name-field-logo {
   float: left;
@@ -1713,6 +1800,80 @@ footer #colophon a:hover {
   background: #989898;
   border: 3px solid #f1f1f1;
   color: white;
+}
+
+/* line 2, ../sass/components/_fundraise-workflow.scss */
+.page-fundraise a[href="/cafb-dc/redhen_campaign/add/general"] {
+  background: none;
+  padding: 0.8em 1em;
+  border-radius: 0.7em;
+  -webkit-box-shadow: 0 2px 3px #666666;
+  -moz-box-shadow: 0 2px 3px #666666;
+  box-shadow: 0 2px 3px #666666;
+  background: #f8971c;
+  border: 3px solid white;
+  color: white;
+  text-transform: uppercase;
+  padding: 0.8em 5em;
+}
+/* line 50, ../sass/_mixins.scss */
+.page-fundraise a[href="/cafb-dc/redhen_campaign/add/general"]:hover {
+  -webkit-transition: all 0.5s;
+  -moz-transition: all 0.5s;
+  -o-transition: all 0.5s;
+  transition: all 0.5s;
+}
+/* line 77, ../sass/_mixins.scss */
+.page-fundraise a[href="/cafb-dc/redhen_campaign/add/general"]:hover {
+  color: white;
+  background: #ffab30;
+}
+
+/* line 8, ../sass/components/_fundraise-workflow.scss */
+.page-redhen-campaign-add-general legend {
+  color: black;
+  font-size: 1.25em;
+}
+/* line 13, ../sass/components/_fundraise-workflow.scss */
+.page-redhen-campaign-add-general fieldset {
+  border: none;
+  padding-left: 0;
+}
+/* line 18, ../sass/components/_fundraise-workflow.scss */
+.page-redhen-campaign-add-general .field-name-redhen-campaign-goal {
+  padding-left: 0;
+}
+/* line 21, ../sass/components/_fundraise-workflow.scss */
+.page-redhen-campaign-add-general .field-name-redhen-campaign-goal label {
+  color: black;
+  font-size: 0.875em;
+}
+/* line 26, ../sass/components/_fundraise-workflow.scss */
+.page-redhen-campaign-add-general .field-name-redhen-campaign-goal .field-prefix {
+  background: #989898;
+  display: none;
+}
+/* line 31, ../sass/components/_fundraise-workflow.scss */
+.page-redhen-campaign-add-general .field-name-redhen-campaign-goal .description {
+  color: black;
+  font-size: 0.75em;
+}
+/* line 38, ../sass/components/_fundraise-workflow.scss */
+.page-redhen-campaign-add-general .container-inline-date .date-padding {
+  padding: 0;
+}
+/* line 43, ../sass/components/_fundraise-workflow.scss */
+.page-redhen-campaign-add-general .field-type-datetime {
+  margin-left: 0;
+}
+/* line 45, ../sass/components/_fundraise-workflow.scss */
+.page-redhen-campaign-add-general .field-type-datetime label {
+  color: black;
+  font-size: 1em;
+}
+/* line 50, ../sass/components/_fundraise-workflow.scss */
+.page-redhen-campaign-add-general .field-type-datetime input {
+  font-size: 1.125em;
 }
 
 /* line 1, ../sass/components/_header.scss */
